--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ button{
     transition: all ease 0.3;
     padding: 5px 10px;
     border-radius: 9px;
+    cursor: pointer;
 }
 button:hover{
     background-color: #f1d232;
@@ -51,13 +52,15 @@ button:hover{
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 50px;
     justify-content: center;
     font-size: 20pt;
     text-transform: capitalize;
     }
 .links img{
-    width: 15%;
-    height: auto;
+    width: 100px;
+    height: 50px;
+    margin-right: 10px;
 }
 .link li{
     display: inline-block;
@@ -88,11 +91,11 @@ button:hover{
     height: 35px;
 }
 .hero-main img{
-    width: 60%;
+    width: 55%;
     height: 90%;
     border-radius: 10px;
     position: relative;
-    top: 70px;
+    top: 90px;
     left: 100px;
 }
 /*Inicio*/
@@ -105,6 +108,8 @@ button:hover{
 .inicio-fila{
     display: flex;
     flex-direction: row;
+    justify-content: start;
+    margin-top: 15px;
 }
 .inicio-especiales{
     width: 100%;
@@ -112,6 +117,7 @@ button:hover{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     justify-items: center;
+    align-items: center;
 }
 .inicio-especial{
     display: flex;
@@ -120,10 +126,13 @@ button:hover{
     height: 70%;
     background-color: #EDEFEE;
     position: relative;
+    border-radius: 10px;
 }
 .inicio-especial img{
     width: 100%;
     height: 35%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .inicio-especial p{
     color: #495E57;
@@ -155,4 +164,44 @@ button:hover{
     color: #EE9972;
     position: absolute;
     right: 25px;
+}
+/*Menu*/
+.pagina-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.menu img{
+    max-width: 800px;
+    max-height: 600px;
+    padding: 10px 0;
+}
+/*Footer*/
+.footer{
+    background-color: #333;
+    position: relative;
+    height: 30px;
+}
+.footer ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.footer li{
+    padding: 0 10px ;
+}
+.footer ul li a{
+    color: white;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+.footer ul li a:hover{
+    color: #f1d232;
 }
